# SacramentMeetingVirtualCam

./: .gitignore  ARCHITECTURE_MISMATCH_FIX.md  BUILD_FIXES.md  BUILD_INSTALLER.md  BUILD_SUCCESS_SUMMARY.md  CATEGORY_REGISTRATION_FIX.md  CMakeLists.txt  INSTALL_DIRECTSHOW.md  LICENSE.txt  LINKER_FIX.md  MANUAL_CLEANUP.md  MISSING_FILES_FIX.md  NEXT_STEP.txt  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  STEP_BY_STEP_BUILD.md  TESTING_GUIDE.md  TESTING_v1.2.0.md  build.bat  build_directshow.bat  build_directshow_simple.bat  build_set_image.bat  build_test.bat  check_camera_registration.ps1  check_directshow_devices.ps1  clean_and_rebuild_x64.bat  diagnose_camera.bat  fix_registry.reg  installer.nsi  rebuild_directshow_x64.bat  register_camera.bat  set_image.cpp  setup_directshow.bat  setup_directshow_auto.bat  test_connect.cpp  test_enum.cpp  test_instantiate.cpp  unregister_camera.bat
.claude/: settings.local.json
src/: CMakeLists.txt  ImageLoader.cpp  ImageLoader.h  SacramentCamera.def  SacramentService.cpp  TrayApp.cpp  TrayApp.h  VirtualCamera.cpp  VirtualCamera.h  VirtualCameraFilter.cpp  VirtualCameraFilter.h  VirtualCameraPin.cpp  VirtualCameraPin.h  main.cpp  resource.rc  service_resource.rc
temp/: icon.af
test/: README.md
